deleted:    static/img/profile.png 	modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
           </p>
           <img
             class="info-block__img"
-            src="../static/img/profile.png"
+            src="../static/img/profile.jpg"
             alt="me"
             width="250"
             height="250"
